Pridėtas shebangų aprašymas, ir Odino loaderis