@@ -9,8 +9,14 @@ sudo apt install openjdk-21-jdk
 java -version
 ```
 
-### Paleistis
+## Paleistis
 
 ```bash
 java --source 21 --enable-preview java_sys-upgrade.java
+```
+
+### Shebang
+
+```shebang
+///usr/bin/env java --source 21 --enable-preview "$0" "$@"; exit $?
 ```
